Some fixes to the initial commits

--- a/allrounder-3/less/icomoon.less
+++ b/allrounder-3/less/icomoon.less
@@ -1,10 +1,12 @@
+// Copied from Protostar because the JUI one has wrong (?) reference to the fonts
+
 @font-face {
 	font-family: 'IcoMoon';
 	src: url('../../../media/jui/fonts/IcoMoon.eot');
 	src: url('../../../media/jui/fonts/IcoMoon.eot?#iefix') format('embedded-opentype'),
+		url('../../../media/jui/fonts/IcoMoon.svg#IcoMoon') format('svg'),
 		url('../../../media/jui/fonts/IcoMoon.woff') format('woff'),
-		url('../../../media/jui/fonts/IcoMoon.ttf') format('truetype'),
-		url('../../../media/jui/fonts/IcoMoon.svg#IcoMoon') format('svg');
+		url('../../../media/jui/fonts/IcoMoon.ttf') format('truetype');
 	font-weight: normal;
 	font-style: normal;
 }
